tests/idris2/basic018/expected
1/1: Building Fin (Fin.idr)
Error: While processing right hand side of bar. Can't find an implementation for IsJust (integerToFin 8 5).

Fin.idr:34:7--34:8
    |
 34 | bar = 8
    |       ^

